set flowable 7.1.0 + clean